--- a/app/website/public/css/index.css
+++ b/app/website/public/css/index.css
@@ -1,54 +1,64 @@
-main {
-	margin: 0;
-	padding: 0;
-	/* width: 100vw;
-    height: 100vh; */
-	display: flex;
-	justify-content: space-between;
-}
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+
 body {
-	font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 main {
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
-	padding: 20px;
+    margin: 0;
+    padding: 0;
+    /* width: 100vw;
+    height: 100vh; */
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+}
+
+.secondHeader{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    /* padding: 10px;
+    background-color: #333;
+    color: white; */
+}
+
+.title{
+    font-size: 5rem;
+    font-weight: bold;
+    text-align: center;
 }
 
 section {
-	padding: 30px;
-	text-align: left;
-	color: white;
-	border-radius: 8px;
-}
-
-.about {
-	background-color: gray;
-}
-
-.info {
-	background-color: orange;
-}
-
-.company {
-	background-color: grey;
+    padding: 30px;
+    text-align: left;
+    border-radius: 8px;
 }
 
 @media (max-width: 768px) {
-	main {
-		padding: 10px;
-	}
+    main {
+        padding: 10px;
+    }
 
-	section {
-		padding: 20px;
-	}
+    section {
+        padding: 20px;
+    }
+}
+
+.fixed-image {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 300px; /* Adjust the size as needed */
+    height: auto;
+    z-index: -1;
 }
