--- a/app/website/public/css/index.css
+++ b/app/website/public/css/index.css
@@ -5,6 +5,24 @@
     box-sizing: border-box;
 }
 
+#lead {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;  /* Centrer horizontalement */
+    align-items: center;      /* Centrer verticalement */
+}
+
+#lead img {
+    max-width: 100%;  /* Pour éviter que l'image dépasse de l'écran */
+    height: auto;
+}
+
+h1 {
+    font-family: "Rubik Glitch", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
 
 body {
     font-family: Arial, sans-serif;
@@ -32,7 +50,7 @@ main {
     color: white; */
 }
 
-.title{
+.title {
     font-size: 5rem;
     font-weight: bold;
     text-align: center;
